objects/Dinosaur__c.object
<CustomObject>
    <fields>
        <fullName>Diet__c</fullName>
        <label>Diet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carnivorous</fullName>
                </value>
                <value>
                    <fullName>Herbivorous</fullName>
                </value>
                <value>
                    <fullName>Omnivorous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_T_Rex__c</fullName>
        <label>Is T-Rex?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Boo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locomotion__c</fullName>
        <label>Locomotion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bipedal</fullName>
                </value>
                <value>
                    <fullName>Quadrupedal</fullName>
                </value>
                <value>
                    <fullName>Winged</fullName>
                </value>
                <value>
                    <fullName>Aquatic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dinosaur</label>
    <nameField>
        <label>Dinosaur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dinosaurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>